se cambio testimos y servicios

--- a/index.html
+++ b/index.html
@@ -641,8 +641,8 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Services</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <h2>Servicios</h2>
+        <p></p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -652,8 +652,8 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <h4 class="title"><a href=""#"service-details.html" class="stretched-link">Creación de Páginas Web/a></h4>
+              <p class="description">Diseño y desarrollo de sitios web a medida, adaptados a las necesidades de tu negocio. Desde páginas informativas hasta plataformas interactivas y responsivas.</p>
             </div>
           </div>
           <!-- End Service Item -->
@@ -661,40 +661,40 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Dolor Sitema</a></h4>
-              <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <h4 class="title"><a href=""#"service-details.html" class="stretched-link">Diseño de Base de Datos</a></h4>
+              <p class="description">Ceación y optimización de bases de datos robustas y escalables, diseñadas para gestionar y organizar la informarción de tu negocio de manera eficiente.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <h4 class="title"><a href=""#"service-details.html" class="stretched-link">Configuración de servidores</a></h4>
+              <p class="description">Implementación y administración de servidores en la nube o locales, con enfoque en la escalabilidad, seguridad y respaldo de datos.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="400">
             <div class="icon flex-shrink-0"><i class="bi bi-binoculars"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <h4 class="title"><a href=""#"service-details.html" class="stretched-link">Integración de Sistemas y Apis</a></h4>
+              <p class="description">Desarrollo soluciones personalizadas para un flujo de datos eficiente y seguro, optimizando procesos y mejorando la interoperabilidad entre sistemas.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href=""#"service-details.html" class="stretched-link">Consultoría Técnica/a></h4>
+              <p class="description">Asesoramiento sobre mejores prácticas, tecnologías adecuadas, diseño de arquitectura escalable y revisión de código para proyectos existentes o nuevos.</p>
             </div>
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="600">
             <div class="icon flex-shrink-0"><i class="bi bi-calendar4-week"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Eiusmod Tempor</a></h4>
-              <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <h4 class="title"><a href=""#"service-details.html" class="stretched-link">Desarrollo de Chatbots IA</a></h4>
+              <p class="description">Creación de sistemas inteligentes que procesen datos, automaticen decisiones o generen predicciones útiles para el negocios.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -709,8 +709,8 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Testimonials</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Testimonios</h2>
+        <p>aqui te precento testimonios de algunos clientes</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -747,12 +747,12 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                  <span>"Trabajar con andres correa fue una experiencia increíble. Desarrolló una página web responsiva para nuestra institución educativa que no solo cumplió con nuestras expectativas, sino que las superó. Su atención al detalle y su capacidad para entender nuestras necesidades fueron clave para el éxito del proyecto. ¡Lo recomiendo ampliamente</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>juan lopez</h3>
+                <h4> Institución Educativa San Peruchito</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -760,12 +760,13 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span>"andres correa nos ayudó a implementar un chatbot basado en inteligencia artificial para nuestro sistema de atención al cliente. Su conocimiento en Python y tecnologías de IA como GPT-4 fue fundamental para crear una solución eficiente y escalable. ¡El chatbot ha mejorado significativamente nuestra interacción con los usuarios!"
+                  </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <h3>Andrés Jimenez</h3>
+                <h4>CESDE</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -773,12 +774,13 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                  <span>"Contraté a andres correa para una consultoría técnica en uno de nuestros proyectos de desarrollo web. Su capacidad para identificar áreas de mejora y proponer soluciones innovadoras fue invaluable. Además, su enfoque en metodologías ágiles nos ayudó a optimizar nuestros procesos. ¡Un profesional excepcional!"
+                  </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <h3>- Edwin Infante</h3>
+                <h4>Director Institución Educativa San Peruchito</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -786,12 +788,13 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span>"Necesitábamos una base de datos robusta para gestionar la información de nuestros estudiantes. andres correa no solo diseñó una solución personalizada con SQL, sino que también nos brindó asesoría técnica para optimizar su uso. Su profesionalismo y expertise son inigualables."
+                  </span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Jorge Iván Grisales Marín</h3>
+                <h4> Institución Educativa CESDE</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -799,12 +802,12 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                  <span>andres correa colaboró con nuestro equipo en el desarrollo de una aplicación web full stack. Su dominio de tecnologías como Node.js, JavaScript y AWS fue impresionante. Además, su actitud colaborativa y su compromiso con los plazos hicieron que el proyecto fuera un éxito. ¡Sin duda lo volvería a contratar!"</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <h3>Giroplay SAS</h3>
+                <h4>Empresa de Software</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -821,8 +824,8 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Contacto</h2>
+        <p>trabajemos juntos, contactame</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -835,24 +838,24 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
-                  <h3>Address</h3>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <h3>direccion</h3>
+                  <p>la chaparrala, andes, antioquia</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="300">
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55</p>
+                  <h3>telefono</h3>
+                  <p>+57 3242955452</p>
                 </div>
               </div><!-- End Info Item -->
 
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h3>Email Us</h3>
-                  <p>info@example.com</p>
+                  <h3>correo electronico</h3>
+                  <p>andrescorrea1026@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -872,12 +875,12 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
               <div class="row gy-4">
 
                 <div class="col-md-6">
-                  <label for="name-field" class="pb-2">Your Name</label>
+                  <label for="name-field" class="pb-2">tu nombre</label>
                   <input type="text" name="name" id="name-field" class="form-control" required="">
                 </div>
 
                 <div class="col-md-6">
-                  <label for="email-field" class="pb-2">Your Email</label>
+                  <label for="email-field" class="pb-2">tu correao electronico</label>
                   <input type="email" class="form-control" name="email" id="email-field" required="">
                 </div>
 
@@ -887,16 +890,16 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
                 </div>
 
                 <div class="col-md-12">
-                  <label for="message-field" class="pb-2">Message</label>
+                  <label for="message-field" class="pb-2">Mensaje</label>
                   <textarea class="form-control" name="message" rows="10" id="message-field" required=""></textarea>
                 </div>
 
                 <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
+                  <div class="loading">cargando</div>
                   <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
+                    <div class="sent-message">tu mensaje ha sido enviado. ¡gracias!</div>
 
-                  <button type="submit">Send Message</button>
+                  <button type="submit">enviar mensaje</button>
                 </div>
 
               </div>
@@ -915,14 +918,11 @@ Entre mis logros participé en el diseño y creación de un sistema de certifica
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">iPortfolio</strong> <span>All Rights Reserved</span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Portfolio</strong> <span>todos los derechos reservados</span></p>
       </div>
       <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you've purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        
+        diselado por <a href="https://bootstrapmade.com/">andres correa
       </div>
     </div>
 
